# cascadq

./: .gitignore  AGENTS.md  CLAUDE.md  Claude.md  Dockerfile  README.md  config.example.yaml  main.py  pyproject.toml
client/: pyproject.toml
client-rs/: Cargo.toml
client-rs/src/: client.rs  config.rs  error.rs  lib.rs
client/src/cascadq_client/: __init__.py  client.py  config.py  errors.py
plans/: spec.md
skills/: stress.md
specs/: design.md  idempotency-and-retries.md  stress-test.md
src/cascadq/: __main__.py  config.py  errors.py  metrics.py  models.py  queue_codec.py
src/cascadq/broker/: __init__.py  broker.py  compaction.py  flush.py  flush_buffer.py  flusher.py  heartbeat.py  queue.py  queue_flusher.py  queue_state.py
src/cascadq/client/: client.py
src/cascadq/server/: app.py  routes.py  schemas.py
src/cascadq/storage/: hedging.py  memory.py  protocol.py  s3.py
tests/: conftest.py  support.py  test_broker.py  test_client.py  test_config.py  test_flush.py  test_flush_buffer.py  test_hedging.py  test_idempotency.py  test_integration.py  test_queue.py  test_queue_state.py  test_server.py  test_storage_memory.py  test_storage_s3.py
tests/stress/: _worker.py  config.py  conftest.py  events.py  metrics.py  prom_metrics.py  stack.py  test_scenarios.py  validator.py  workers.py
