[project]
name = "cascadq"
version = "0.1.0"
description = "Object-storage-backed task queue using CAS for consistency"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.40",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "jsonschema>=4.20",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascadq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
