[project]
name = "cascadq"
version = "0.1.0"
description = "Object-storage-backed task queue using CAS for consistency"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
server = [
    "starlette>=0.40",
    "uvicorn>=0.30",
    "jsonschema>=4.20",
]
s3 = ["aiobotocore>=2.13"]
dev = [
    "cascadq[server]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "ty>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascadq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["stress: long-running stress tests with concurrent load"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "SIM105",  # contextlib.suppress — prefer explicit try/except for async cancellation
]

[tool.ty.environment]
python-version = "3.13"
