[package]
name = "cascadq-client"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for the CAScadq task queue"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
