[project]
name = "cascadq-client"
version = "0.1.0"
description = "Async reference client for the CAScadq task queue"
requires-python = ">=3.13"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascadq_client"]
